--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -20,20 +20,21 @@
                 <li>
                     <a href="{% url 'post-create' %}">+ New Post</a>
                 </li>
-                {% comment %} <ul>
+                {% if user.is_authenticated %}
                     <li>
-                        <a href="{% url 'home' %}">Home</a>
+                        <a href="{% url 'profile' %}">Profile</a>
                     </li>
                     <li>
-                        <a href="{% url 'posts' %}">Blog Posts</a>
+                        <a href="{% url 'logout' %}">Logout</a>
                     </li>
+                {% else %}
                     <li>
                         <a href="{% url 'login' %}">Login</a>
                     </li>
                     <li>
                         <a href="{% url 'register' %}">Register</a>
                     </li>
-                </ul> {% endcomment %}
+                {% endif %}
             </nav>
         </header>
         <div class="content">
