--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -25,11 +25,11 @@
                         <a href="{% url 'profile' %}">Profile</a>
                     </li>
                     <li>
-                        <a href="{% url 'logout' %}">Logout</a>
+                        <a href="{% url 'login' %}">Logout</a>
                     </li>
                 {% else %}
                     <li>
-                        <a href="{% url 'login' %}">Login</a>
+                        <a href="{% url 'home' %}">Login</a>
                     </li>
                     <li>
                         <a href="{% url 'register' %}">Register</a>
