--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -16,4 +16,29 @@
         <a href="{% url 'post-delete' pk=post.pk %}"
            onclick="return confirm('Are you sure?')">Delete</a>
     {% endif %}
+    <hr>
+    <h3>Comments</h3>
+    {% for comment in post.comments.all %}
+        <div class="comment">
+            <p>
+                <strong>{{ comment.author }}</strong> on {{ comment.created_at }}
+            </p>
+            <p>{{ comment.content }}</p>
+            {% if user == comment.author %}
+                <a href="{% url 'comment-update' comment.id %}">Edit</a> |
+                <a href="{% url 'comment-delete' comment.id %}">Delete</a>
+            {% endif %}
+        </div>
+    {% empty %}
+        <p>No comments yet.</p>
+    {% endfor %}
+    {% if user.is_authenticated %}
+        <hr>
+        <h4>Leave a Comment</h4>
+        <form action="{% url 'add_comment' post.id %}" method="post">
+            {% csrf_token %}
+            {{ comment_form.as_p }}
+            <button type="submit">Post Comment</button>
+        </form>
+    {% endif %}
 {% endblock content %}
