--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -37,6 +37,10 @@
                 {% endif %}
             </nav>
         </header>
+        <form action="{% url 'search' %}" method="get">
+            <input name="q" type="text" placeholder="Search posts or tags...">
+            <button type="submit">Search</button>
+        </form>
         <div class="content">
             {% block content %}<!-- Page-specific content goes here -->{% endblock %}
         </div>
